--- a/index.html
+++ b/index.html
@@ -11,34 +11,43 @@
         <h1>My Profile</h1>
         <nav>
             <ul>
-                <li>About Me</li>
-                <li>Hobbies</li>
-                <li>Contact</li>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#hobbies">Hobbies</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    <!-- Bio Section -->
-    <section>
-        <h2>About Me</h2>
-        <p>Hello! My name is Shuaib Olaitan Isiaka, and I am passionate about web development and technology. I enjoy learning new programming languages and building creative projects. I also have a deep interest in graphic design and digital art.</p>
-        <img src="shuaibolaitan.jpg" alt="Profile Picture">
-    </section>
+    <!-- Main Section -->
+    <main>
+        <!-- About Me Section -->
+        <section id="about">
+            <h2>About Me</h2>
+            <p>Hello! My name is Shuaib Olaitan Isiaka, and I am passionate about web development and technology.</p>
+            <img src="shuaibolaitan.jpg" alt="Profile Picture">
+        </section>
 
-    <!-- Hobbies Section -->
-    <section>
-        <h2>Hobbies and Interests</h2>
-        <ul>
-            <li>Coding and Web Development</li>
-            <li>Photography</li>
-            <li>Traveling and Exploring New Places</li>
-        </ul>
-    </section>
+        <!-- Hobbies Section -->
+        <section id="hobbies">
+            <h2>Hobbies</h2>
+            <ul>
+                <li>Coding</li>
+                <li>Photography</li>
+                <li>Traveling and Exploring New Places</li>
+            </ul>
+        </section>
+
+        <!-- Contact Section -->
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Email: <a href="mailto:shuaibolaitan00@gmail.com">shuaibolaitan00@gmail.com</a></p>
+            <p>Follow me on social media: <a href="https://twitter.com/olas4demall">Twitter</a>, <a href="https://linkedin.com/in/shuaibolaitan88">LinkedIn</a></p>
+        </section>
+    </main>
 
     <!-- Footer Section -->
     <footer>
-        <p>Contact me at: <a href="mailto:shuaibolaitan00@gmail.com>shuaibolaitan00@gmail.com</a></p>
-        <p>Follow me on social media: <a href="https://twitter.com/olas4demall">Twitter</a> | <a href="https://linkedin.com/in/shuaibolaitan88">LinkedIn</a></p>
+        <p>&copy; 2025 Shuaib Olaitan Isiaka</p>
     </footer>
 </body>
 </html>
